add_subdirectory(recentfiles)
add_subdirectory(colorgrid)
add_subdirectory(actionlabel)
add_subdirectory(scrollpanner)
add_subdirectory(tablistmenu)
add_subdirectory(actionpanel)
add_subdirectory(pathpicker)
add_subdirectory(optionslider)
add_subdirectory(spinslider)
add_subdirectory(ledwidget)
